--- a/week06/Twenty/deploy/config.properties
+++ b/week06/Twenty/deploy/config.properties
@@ -1,3 +1,6 @@
-word=Word1,Word2
-freq=Freq1,Freq2
-jarPath=/home/runner/SWE262P/week06/Twenty/deploy
+# Word1 Word2
+word=Word2
+# Freq1 Freq2
+freq=Freq1
+
+jarPath=.
